# food-delivery-delay-prediction

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
dashboard/: app.py
data/: README.md
docs/: DATA_DICTIONARY.md  model_report.md  tuning_report.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: delivery_overview.json
monitoring/grafana/provisioning/dashboards/: provider.yml
notebooks/: 01_eda.ipynb
scripts/: _bootstrap.py  download_dataset.py  evaluate.py  generate_data.py  stream_simulator.py  train.py  tune.py
src/delivery_delay/: __init__.py  config.py  recommend.py
src/delivery_delay/api/: main.py  metrics.py  schemas.py
src/delivery_delay/data/: generator.py  loader.py  weather.py
src/delivery_delay/features/: build.py  geo.py  temporal.py
src/delivery_delay/models/: evaluate.py  predict.py  registry.py  train.py  tune.py
tests/: conftest.py  test_api.py  test_features.py  test_generator.py  test_geo.py  test_predict.py  test_temporal.py  test_weather.py
