[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-delay"
version = "0.1.0"
description = "End-to-end food delivery delay prediction: ETA regression + delay-probability classification with weather/geo/temporal features, FastAPI serving, and a Streamlit decision-support dashboard."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raveendra Sanapala" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py310"]
